Revision history for Perl extension FSA::Rules.

0.23

0.22  2005-08-08T17:10:00
      - Calling reset() now resets the "done" flag to undef unless "done"
        is set to a code reference. Reported by Xavier Caron.

0.21  2004-12-31T18:30:20
      - Calling reset() now empties the machine hashref and state hashrefs.
        [Curtis & David]
      - User can now turn text wrapping off and on for nodes and labels.
        [Curtis]
      - states() will now croak if called with any non-existent states.
        [Curtis]
      - Added "decorate => 1" attribute to graphs to have lines drawn from
        the edge to its corresponding label. [Curtis]
      - Changed "label_wrap" to "text_wrap" and had it apply to all text.
        [Curtis].
      - Added "Text::Wrap" as a requirement. [Curtis]
      - Fixed documentation typo--rule actions specified via a hash reference
        rule spec are keyed off the word "action", not "actions". [David]
      - Actions specified via a hash reference rule specification can now
        take a code reference as well as an array referencde of code
        references. [David]

0.20  2004-12-24T18:38:57
      - Modified Synopsis to show off the result() method.
      - Other minor documentation fixes spotted by Curtis Poe.
      - Added graph support. [Curtis Poe]
      - Added at() method. [Curtis Poe]
      - Simplified synopsis. [Curtis Poe]
      - Added "state_class" parameter to simplify subclassing FSA::State.
      - A rule defined as a false scalar value, rather than a code reference,
        now works properly.
      - A successful attempt to switch states with the "strict" attribute
        enabled now succeeds if no other rules evaluate to true.
      - Each rule may now take an optional hash reference instead of a code
        or array reference. The hash reference may optionally specify a
        rule label, which eases the tracking of rules and allows graphs to
        generate rule labels. [Curtis Poe]